Allow to expose an SSH port

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,6 +17,7 @@
       - 80
     ports:
       - "{{ gitlab_container_host_address }}:{{ gitlab_container_port }}:80"
+      - "{{ gitlab_container_host_ssh_address }}:{{ gitlab_container_ssh_port }}:22"
     volumes:
       - "{{ ext_gitlab_config_volume }}:/etc/gitlab"
       - "{{ ext_gitlab_logs_volume }}:/var/log/gitlab"
